@startuml

title __MVC's Class Diagram__\n

  namespace patterns.mvc {
    class patterns.mvc.Controller {
        + Controller()
        + changeStatus()
        + setModel()
        + setUi()
        + update()
    }
  }
  

  namespace patterns.mvc {
    class patterns.mvc.Main {
        {static} + main()
    }
  }
  

  namespace patterns.mvc {
    class patterns.mvc.Model {
        + Model()
        + moveToNextState()
    }
  }
  

  namespace patterns.mvc {
    enum TrafficLight {
      GREEN
      RED
      YELLOW
      kleur
    }
  }
  

  namespace patterns.mvc {
    class patterns.mvc.View {
        - status : String
        + View()
        + changeStatus()
        + redraw()
        + updateStatus()
    }
  }
  

  patterns.mvc.Controller .up.|> java.util.Observer
  patterns.mvc.Controller o-- patterns.mvc.Model : model
  patterns.mvc.Controller o-- patterns.mvc.View : ui
  patterns.mvc.Model -up-|> java.util.Observable
  patterns.mvc.Model o-- patterns.mvc.TrafficLight : trafficLight
  patterns.mvc.View o-- patterns.mvc.Controller : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
